Moved some wording around for guards so the subcases are the last thing.  Started the preamble for SM.

--- a/proof/theorems/progress/scheme.tex
+++ b/proof/theorems/progress/scheme.tex
@@ -23,15 +23,31 @@ TODO
 
 % sm k e
 
+\newcommand{\pssm}{\expsm{\first{\varcsm}}{\first{\varexpm}}}
+
+\begin{case}{\pssm}
+
+\pshypby
+{\first{\varexpm}}
+{\second{\varexpm}}
+\pssub
+{\first{\varexpm}}
+{\second{\varexpm}}
+{\pssm}
+{\expsm{\first{\varcsm}}{\second{\varexpm}}}
+\pserr
+{\first{\varexpm}}
+{\pssm}
+\pscasesone
+{\first{\varexpm}}
+{\first{\varcsm}}
+{\pssm}
+
+% L
+
+\begin{subcase}{\cslump}
 
 
-\begin{case}
-
-$e_{S}=SM^{T}$ $e_{M}^{1}$
-
-$e_{M}^{1}$ is an unforced value or $e_{M}^{1}\rightarrow e_{M}^{2}$ or $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} by ML progress (Theorem \ref{hmps}).  If $e_{M}^{1}\rightarrow e_{M}^{2}$ then $SM^{T}$ $e_{M}^{1}\rightarrow SM^{T}$ $e_{M}^{2}$.  If $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string} then $SM^{T}$ $e_{M}^{1}\rightarrow$ \emph{\textbf{Error}: string}.  If $e_{M}^{1}$ is an unforced value then $T$ determines the reduction of $SM^{T}$ $e_{M}^{1}$:
-
-\begin{subcase}
 
 $T=L$
 
