Changed SH/SM L case for HM/MH values to reduce to wrongs.

--- a/model/scheme/operational-semantics/haskell.tex
+++ b/model/scheme/operational-semantics/haskell.tex
@@ -6,7 +6,7 @@
 
 \redrules
 {\expsh{\cslump}{(\exphm{\cslump}{\varcsm}{\varvalfm})}}
-{\expsm{\cslump}{\varvalfm}} \\
+{\expwrongd{\errvalue}} \\
 
 % sh L (ms L w)
 
