--- a/model/scheme/operational-semantics/ml.tex
+++ b/model/scheme/operational-semantics/ml.tex
@@ -6,7 +6,7 @@
 
 \redrules
 {\expsm{\cslump}{(\expmh{\cslump}{\varcsh}{\varexph})}}
-{\expsh{\cslump}{\varexph}} \\
+{\expwrongd{\errvalue}} \\
 
 % sm L (ms L v)
 
