New ps macros.  Fixed some vars in the model.  SM L case.

--- a/macros.tex
+++ b/macros.tex
@@ -251,10 +251,13 @@
 \newcommand{\psvalifeqm}[3]{\psvalifone{#1}{\psvaleqm{#1}{#2}{#3}}}
 \newcommand{\psvalifinh}[3]{\psvalifone{#1}{\psvalinh{#1}{#2}{#3}}}
 \newcommand{\psvalifinm}[3]{\psvalifone{#1}{\psvalinm{#1}{#2}{#3}}}
+\newcommand{\psvalcan}[1]{#1 by lemma \ref{lemcan}.}
+\newcommand{\psvalcaneq}[2]{\psvalcan{$#1 = #2$}}
+\newcommand{\psvalcanin}[2]{\psvalcan{$#1 \in \lbrace #2 \rbrace$}}
+
+% Temporary
 
 \newcommand{\w}{}
 \newcommand{\x}{}
 \newcommand{\y}{}
 \newcommand{\z}{}
-
-%\newcommand{\}{}
