--- a/model/scheme/operational-semantics/ml.tex
+++ b/model/scheme/operational-semantics/ml.tex
@@ -11,8 +11,8 @@
 % sm L (ms L v)
 
 \redrules
-{\expsm{\cslump}{(\expms{\cslump}{\varvalus})}}
-{\varvalus} \\
+{\expsm{\cslump}{(\expms{\cslump}{\varvalfs})}}
+{\varvalfs} \\
 
 % sm N n
 
