--- a/proof/theorems/progress/scheme.tex
+++ b/proof/theorems/progress/scheme.tex
@@ -45,13 +45,20 @@ TODO
 
 % L
 
+\renewcommand{\x}{\expmh{\cslump}{\first{\varcsh}}{\first{\varexph}}}
+\renewcommand{\y}{\expms{\cslump}{\first{\varvalfs}}}
+
 \begin{subcase}{\cslump}
 
-
-
-$T=L$
-
-$e_{M}^{1}={^{L}M}S$ $v_{S}$ by canonical forms (Lemma \ref{cf}).  $SM^{L}$ $(^{L}MS$ $v_{S})\rightarrow v_{S}$.
+\psvalcanin
+{\first{\varexpm}}
+{\x, \y}
+\psred
+{\expsm{\cslump}{(\x)}}
+{\expwrongd{\errvalue}}
+\psred
+{\expsm{\cslump}{(\y)}}
+{\first{\varvalfs}}
 
 \end{subcase}
 
