Revised the pn thm beginning and the pn lemmas to use the macros.

--- a/proof/lemmas/expression-substitution.tex
+++ b/proof/lemmas/expression-substitution.tex
@@ -2,7 +2,7 @@
 
 \label{lemexp}
 
-If $\Gamma,x_{1}:T_{1}\vdash_{A}e_{A}:T_{2}$ and $\Gamma\vdash_{A}x_{2}:T_{1}$ then $\Gamma\vdash_{A}e_{A}[x_{2}/x_{1}]:T_{2}$ where $A\in\lbrace H,M\rbrace$.  If $\Gamma,x_{1}:TST\vdash_{S}e_{S}:TST$ and $\Gamma\vdash_{S}x_{2}:TST$ then $\Gamma\vdash_{S}e_{S}[x_{2}/x_{1}]:TST$.
+If \judeh{\envexte{\first{\varvarh}}{\first{\vartyh}}}{\first{\varexph}}{\second{\vartyh}} and \judeh{\env}{\second{\varexph}}{\first{\vartyh}} then \judeh{\env}{\expsubst{\first{\varexph}}{\second{\varexph}}{\first{\varvarh}}}{\second{\vartyh}}.  If \judem{\envexte{\first{\varvarm}}{\first{\vartym}}}{\first{\varexpm}}{\second{\vartym}} and \judem{\env}{\second{\varexpm}}{\first{\vartym}} then \judem{\env}{\expsubst{\first{\varexpm}}{\second{\varexpm}}{\first{\varvarm}}}{\second{\vartym}}.  If \judes{\envexte{\first{\varvars}}{\tytst}}{\first{\varexps}}{\tytst} and \judes{\env}{\second{\varexps}}{\tytst} then \judes{\env}{\expsubst{\first{\varexps}}{\second{\varexps}}{\first{\varvars}}}{\tytst}.
 
 \begin{proof}
 
