--- a/proof/lemmas/evaluation-context.tex
+++ b/proof/lemmas/evaluation-context.tex
@@ -2,7 +2,9 @@
 
 \label{lemeva}
 
-If $\Gamma\vdash_{A}e_{A}^{1}:T_{1}$, $\Gamma\vdash_{A}e_{A}^{2}:T_{1}$, and $\mathscr{E}[e_{A}^{1}]:T_{2}$ then $\mathscr{E}[e_{A}^{2}]:T_{2}$ where $A\in\lbrace H,M,S\rbrace$.
+If \judeh{}{\first{\varexph}}{\first{\vartyh}}, \judeh{}{\second{\varexph}}{\first{\vartyh}}, and \judeh{}{\redconh{\first{\varexph}}}{\second{\vartyh}} then \judeh{}{\redconh{\second{\varexph}}}{\second{\vartyh}}.
+If \judem{}{\first{\varexpm}}{\first{\vartym}}, \judem{}{\second{\varexpm}}{\first{\vartym}}, and \judem{}{\redconm{\first{\varexpm}}}{\second{\vartym}} then \judem{}{\redconm{\second{\varexpm}}}{\second{\vartym}}.
+If \judes{}{\first{\varexps}}{\tytst}, \judes{}{\second{\varexps}}{\tytst}, and \judes{}{\redcons{\first{\varexps}}}{\tytst} then \judes{}{\redcons{\second{\varexps}}}{\tytst}.
 
 \begin{proof}
 
