Separated the pn thm into three.

--- a/chapter-3.tex
+++ b/chapter-3.tex
@@ -35,3 +35,7 @@ If \first{\vartyh} is substituted for free occurrences of \first{\tyvarh} within
 \input{proof/preservation/evaluation-context.tex}
 
 \input{proof/preservation/haskell.tex}
+
+\input{proof/preservation/ml.tex}
+
+\input{proof/preservation/scheme.tex}
