--- a/proof/preservation/scheme.tex
+++ b/proof/preservation/scheme.tex
@@ -2,7 +2,7 @@
 
 \label{thmpns}
 
-If $\Gamma\vdash_{A}e_{A}^{1}:T$ and $e_{A}^{1}\rightarrow e_{A}^{2}$ then $\Gamma\vdash_{A}e_{A}^{2}:T$ where $A\in\lbrace H,M\rbrace$.  If $\Gamma\vdash_{S}e_{S}^{1}:TST$ and $e_{S}^{1}\rightarrow e_{S}^{2}$ then $\Gamma\vdash_{S}e_{S}^{2}:TST$.
+If \judes{\env}{\first{\varexps}}{\tytst} and \first{\varexps} \red \second{\varexps} then \judes{\env}{\second{\varexps}}{\tytst}.
 
 \begin{proof}
 
