--- a/proof/preservation/haskell.tex
+++ b/proof/preservation/haskell.tex
@@ -2,71 +2,42 @@
 
 \label{thmpnh}
 
-If $\Gamma\vdash_{A}e_{A}^{1}:T$ and $e_{A}^{1}\rightarrow e_{A}^{2}$ then $\Gamma\vdash_{A}e_{A}^{2}:T$ where $A\in\lbrace H,M\rbrace$.  If $\Gamma\vdash_{S}e_{S}^{1}:TST$ and $e_{S}^{1}\rightarrow e_{S}^{2}$ then $\Gamma\vdash_{S}e_{S}^{2}:TST$.
+If \judeh{\env}{\first{\varexph}}{\first{\vartyh}} and \redruleh{\first{\varexph}}{\second{\varexph}} then \judeh{\env}{\second{\varexph}}{\first{\vartyh}}.
 
 \begin{proof}
 
-By cases on the reductions $e_{A}^{1}\rightarrow e_{A}^{2}$ and $e_{S}^{1}\rightarrow e_{S}^{2}$ and evaluation context preservation (Lemma \ref{ec}).  Straightforward cases of Scheme preservation are elided.
+By cases on the reduction \redruleh{\first{\varexph}}{\second{\varexph}} and lemma \ref{lemeva}.
 
 % e e
 
-\begin{case}
+\begin{case}{\osfapph}
+
 $(\lambda x:T_{1}.e_{A}^{1})$ $e_{A}^{2}\rightarrow e_{A}^{1}[e_{A}^{2}/x]$ where $A\in\lbrace H,M\rbrace$
 
 $\Gamma\vdash_{A}(\lambda x:T_{1}.e_{A}^{1})$ $e_{A}^{2}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}\lambda x:T_{1}.e_{A}^{1}:T_{1}\rightarrow T_{2}$, $\Gamma,x:T_{1}\vdash_{A}e_{A}^{1}:T_{2}$, $\Gamma\vdash_{A}e_{A}^{2}:T_{1}$, $\Gamma,x:T_{1}\vdash_{A}x:T_{1}$, and $T=T_{2}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}e_{A}^{1}[e_{A}^{2}/x]:T_{2}$ by term substitution (Lemma \ref{tms}).  $\Gamma\vdash_{A}e_{A}^{1}[e_{A}^{2}/x]:T$ because $T_{2}=T$.
 \end{case}
 
-% fix e
-
-\begin{case}
-$\mathtt{fix}$ $(\lambda x:T_{1}.e_{A})\rightarrow e_{A}[(\mathtt{fix}$ $(\lambda x:T_{1}.e_{A}))/x]$ where $A\in\lbrace H,M\rbrace$
-
-$\Gamma\vdash_{A}\mathtt{fix}$ $(\lambda x:T_{1}.e_{A}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}\lambda x:T_{1}.e_{A}:T_{1}\rightarrow T_{2}$, $\Gamma,x:T_{1}\vdash_{A}e_{A}:T_{1}$, $\Gamma,x:T_{1}\vdash_{A}x:T_{1}$, and $T=T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}e_{A}[(\mathtt{fix}$ $(\lambda x:T_{1}.e_{A}))/x]:T_{1}$ by term substitution (Lemma \ref{tms}).  $\Gamma\vdash_{A}e_{A}[(\mathtt{fix}$ $(\lambda x:T_{1}.e_{A}))/x]:T$ because $T_{1}=T$.
-\end{case}
-
 % e<t>
 
-\begin{case}
+\begin{case}{\ostapp}
+
 $(\Lambda X.e_{A})$ $\lbrace T_{1}\rbrace\rightarrow e_{A}[T_{1}/X]$ where $A\in\lbrace H,M\rbrace$
 
 $\Gamma\vdash_{A}(\Lambda X.e_{H})$ $\lbrace T_{1}\rbrace:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}\Lambda X.e_{A}:\forall X.T_{2}$, $\Gamma,X\vdash_{A}e_{A}:T_{2}$, and $T=T_{2}[T_{1}/X]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}e_{A}[T_{1}/X]:T_{2}[T_{1}/X]$ by type substitution (Lemma \ref{tes}).  $\Gamma\vdash_{A}e_{A}[T_{1}/X]:T$ because $T_{2}[T_{1}/X]=T$.
 \end{case}
 
-% hd nil
+% fix e
 
-\begin{case}
-$\mathtt{hd}$ $\mathtt{nil}^{T_{1}}\rightarrow\mathtt{wrong}^{T_{1}}$ \emph{``Empty list"} where $A\in\lbrace H,M\rbrace$
+\begin{case}{\osfix}
 
-$\Gamma\vdash_{A}\mathtt{hd}$ $\mathtt{nil}^{T_{1}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}\mathtt{nil}^{T_{1}}:[T_{1}]$, $T=T_{1}$, and $\Gamma\vdash_{A}\mathtt{wrong}^{T_{1}}$ $\mathrm{``Empty}$ $\mathrm{list"}:T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}\mathtt{wrong}^{T_{1}}$ $\mathrm{``Empty}$ $\mathrm{list"}:T$ because $T_{1}=T$.
-\end{case}
+$\mathtt{fix}$ $(\lambda x:T_{1}.e_{A})\rightarrow e_{A}[(\mathtt{fix}$ $(\lambda x:T_{1}.e_{A}))/x]$ where $A\in\lbrace H,M\rbrace$
 
-% tl nil
-
-\begin{case}
-$\mathtt{tl}$ $\mathtt{nil}^{T_{1}}\rightarrow\mathtt{wrong}^{[T_{1}]}$ \emph{``Empty list"} where $A\in\lbrace H,M\rbrace$
-
-$\Gamma\vdash_{A}\mathtt{tl}$ $\mathtt{nil}^{T_{1}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}\mathtt{nil}^{T_{1}}:[T_{1}]$, $T=[T_{1}]$, and $\Gamma\vdash_{A}\mathtt{wrong}^{[T_{1}]}$ $\mathrm{``Empty}$ $\mathrm{list"}:[T_{1}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}\mathtt{wrong}^{[T_{1}]}$ $\mathrm{``Empty}$ $\mathrm{list"}:T$ because $[T_{1}]=T$.
-\end{case}
-
-% h head cons
-
-\begin{case}
-$\mathtt{hd}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rightarrow e_{H}^{1}$
-
-$\Gamma\vdash_{H}\mathtt{hd}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{H}e_{H}^{1}:T_{1}$, $\Gamma\vdash_{H}\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}:[T_{1}]$, and $T=T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{H}e_{H}^{1}:T$ because $T_{1}=T$.
-\end{case}
-
-% h tail cons
-
-\begin{case}
-$\mathtt{tl}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rightarrow e_{H}^{2}$
-
-$\Gamma\vdash_{H}\mathtt{tl}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{H}e_{H}^{2}:[T_{1}]$, $\Gamma\vdash_{H}\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}:[T_{1}]$, and $T=[T_{1}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{H}e_{H}^{2}:T$ because $[T_{1}]=T$.
+$\Gamma\vdash_{A}\mathtt{fix}$ $(\lambda x:T_{1}.e_{A}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}\lambda x:T_{1}.e_{A}:T_{1}\rightarrow T_{2}$, $\Gamma,x:T_{1}\vdash_{A}e_{A}:T_{1}$, $\Gamma,x:T_{1}\vdash_{A}x:T_{1}$, and $T=T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}e_{A}[(\mathtt{fix}$ $(\lambda x:T_{1}.e_{A}))/x]:T_{1}$ by term substitution (Lemma \ref{tms}).  $\Gamma\vdash_{A}e_{A}[(\mathtt{fix}$ $(\lambda x:T_{1}.e_{A}))/x]:T$ because $T_{1}=T$.
 \end{case}
 
 % + n n
 
-\begin{case}
+\begin{case}{\osadd}
 $+$ $\overline{n_{1}}$ $\overline{n_{2}}\rightarrow\overline{n_{1}+n_{2}}$ where $A\in\lbrace H,M\rbrace$
 
 $\vdash_{A}+$ $\overline{n_{1}}$ $\overline{n_{2}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\vdash_{A}\overline{n_{1}}:N$, $\vdash_{A}\overline{n_{2}}:N$, $T=N$, and $\vdash_{A}\overline{n_{1}+n_{2}}:N$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\vdash_{A}\overline{n_{1}+n_{2}}:T$ because $N=T$.
@@ -74,31 +45,16 @@ $\vdash_{A}+$ $\overline{n_{1}}$ $\overline{n_{2}}:T$ by premise and uniqueness 
 
 % - n n
 
-\begin{case}
+\begin{case}{\ossub}
 $-$ $\overline{n_{1}}$ $\overline{n_{2}}\rightarrow\overline{max(n_{1}-n_{2},0)}$ where $A\in\lbrace H,M\rbrace$
 
 $\vdash_{A}-$ $\overline{n_{1}}$ $\overline{n_{2}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\vdash_{A}\overline{n_{1}}:N$, $\vdash_{A}\overline{n_{2}}:N$, $T=N$, and $\vdash_{A}\overline{max(n_{1}-n_{2},0)}:N$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\vdash_{A}\overline{max(n_{1}-n_{2},0)}:T$ because $N=T$.
 \end{case}
 
-% null nil
-
-\begin{case}
-$\mathtt{null?}$ $\mathtt{nil}^{T_{1}}\rightarrow\overline{0}$ where $A\in\lbrace H,M\rbrace$
-
-$\vdash_{A}\mathtt{null?}$ $\mathtt{nil}^{T_{1}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=N$ and $\vdash_{A}\overline{0}:N$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\vdash_{A}\overline{0}:T$ because $N=T$.
-\end{case}
-
-% null (cons e e)
-
-\begin{case}
-$\mathtt{null?}$ $(\mathtt{cons}$ $B_{A}^{1}$ $B_{A}^{2})\rightarrow\overline{1}$ where $(A,B)\in\lbrace(H,e),(M,v)\rbrace$
-
-$\Gamma\vdash_{A}\mathtt{null?}$ $(\mathtt{cons}$ $B_{A}^{1}$ $B_{A}^{2}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=N$ and $\vdash_{A}\overline{1}:N$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\vdash_{A}\overline{1}:T$ because $N=T$.
-\end{case}
-
 % if0 0 e e
 
-\begin{case}
+\begin{case}{\osiftrue}
+
 $\mathtt{if0}$ $\overline{0}$ $e_{A}^{1}$ $e_{A}^{2}\rightarrow e_{A}^{1}$ where $A\in\lbrace H,M\rbrace$
 
 $\Gamma\vdash_{A}\mathtt{if0}$ $\overline{0}$ $e_{A}^{1}$ $e_{A}^{2}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}e_{A}^{1}:T_{1}$ and $T=T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}e_{A}^{1}:T$ because $T_{1}=T$.
@@ -106,18 +62,82 @@ $\Gamma\vdash_{A}\mathtt{if0}$ $\overline{0}$ $e_{A}^{1}$ $e_{A}^{2}:T$ by premi
 
 % if0 n e e
 
-\begin{case}
+\begin{case}{\osiffalse}
+
 $\mathtt{if0}$ $\overline{n}$ $e_{A}^{1}$ $e_{A}^{2}\rightarrow e_{A}^{2}$ $(n\neq0)$ where $A\in\lbrace H,M\rbrace$
 
 $\Gamma\vdash_{A}\mathtt{if0}$ $\overline{n}$ $e_{A}^{1}$ $e_{A}^{2}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}e_{A}^{2}:T_{1}$ and $T=T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}e_{A}^{2}:T$ because $T_{1}=T$.
 \end{case}
 
-% wrong
+% hd nil
 
-\begin{case}
+\begin{case}{\oshdnil}
+
+$\mathtt{hd}$ $\mathtt{nil}^{T_{1}}\rightarrow\mathtt{wrong}^{T_{1}}$ \emph{``Empty list"} where $A\in\lbrace H,M\rbrace$
+
+$\Gamma\vdash_{A}\mathtt{hd}$ $\mathtt{nil}^{T_{1}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}\mathtt{nil}^{T_{1}}:[T_{1}]$, $T=T_{1}$, and $\Gamma\vdash_{A}\mathtt{wrong}^{T_{1}}$ $\mathrm{``Empty}$ $\mathrm{list"}:T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}\mathtt{wrong}^{T_{1}}$ $\mathrm{``Empty}$ $\mathrm{list"}:T$ because $T_{1}=T$.
+\end{case}
+
+% tl nil
+
+\begin{case}{\ostlnil}
+
+$\mathtt{tl}$ $\mathtt{nil}^{T_{1}}\rightarrow\mathtt{wrong}^{[T_{1}]}$ \emph{``Empty list"} where $A\in\lbrace H,M\rbrace$
+
+$\Gamma\vdash_{A}\mathtt{tl}$ $\mathtt{nil}^{T_{1}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{A}\mathtt{nil}^{T_{1}}:[T_{1}]$, $T=[T_{1}]$, and $\Gamma\vdash_{A}\mathtt{wrong}^{[T_{1}]}$ $\mathrm{``Empty}$ $\mathrm{list"}:[T_{1}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{A}\mathtt{wrong}^{[T_{1}]}$ $\mathrm{``Empty}$ $\mathrm{list"}:T$ because $[T_{1}]=T$.
+\end{case}
+
+% hd (cons e e)
+
+\begin{case}{\oshdconsh}
+
+$\mathtt{hd}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rightarrow e_{H}^{1}$
+
+$\Gamma\vdash_{H}\mathtt{hd}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{H}e_{H}^{1}:T_{1}$, $\Gamma\vdash_{H}\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}:[T_{1}]$, and $T=T_{1}$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{H}e_{H}^{1}:T$ because $T_{1}=T$.
+\end{case}
+
+% tl (cons e e)
+
+\begin{case}{\ostlconsh}
+
+$\mathtt{tl}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rightarrow e_{H}^{2}$
+
+$\Gamma\vdash_{H}\mathtt{tl}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $\Gamma\vdash_{H}e_{H}^{2}:[T_{1}]$, $\Gamma\vdash_{H}\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}:[T_{1}]$, and $T=[T_{1}]$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\Gamma\vdash_{H}e_{H}^{2}:T$ because $[T_{1}]=T$.
+\end{case}
+
+% null nil
+
+\begin{case}{\osnullnil}
+
+$\mathtt{null?}$ $\mathtt{nil}^{T_{1}}\rightarrow\overline{0}$ where $A\in\lbrace H,M\rbrace$
+
+$\vdash_{A}\mathtt{null?}$ $\mathtt{nil}^{T_{1}}:T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=N$ and $\vdash_{A}\overline{0}:N$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\vdash_{A}\overline{0}:T$ because $N=T$.
+\end{case}
+
+% null (cons e e)
+
+\begin{case}{\osnullconsh}
+
+$\mathtt{null?}$ $(\mathtt{cons}$ $B_{A}^{1}$ $B_{A}^{2})\rightarrow\overline{1}$ where $(A,B)\in\lbrace(H,e),(M,v)\rbrace$
+
+$\Gamma\vdash_{A}\mathtt{null?}$ $(\mathtt{cons}$ $B_{A}^{1}$ $B_{A}^{2}):T$ by premise and uniqueness of types (Lemma \ref{uot}).  $T=N$ and $\vdash_{A}\overline{1}:N$ by inversion (Lemma \ref{i}) and uniqueness of types.  $\vdash_{A}\overline{1}:T$ because $N=T$.
+\end{case}
+
+% wrong t string
+
+\begin{case}{\oswrong}
+
 $\mathtt{wrong}^{T_{1}}$ \emph{string} $\rightarrow$ \emph{\textbf{Error}: string}
 
 Irrelevant because an error terminates the computation.
+\end{case}
+
+% hm t L (mh L t e)
+
+\begin{case}{\oshmmhneq}
+
+TEST
+
 \end{case}
 
 % hm mh lump
