--- a/macros.tex
+++ b/macros.tex
@@ -255,6 +255,14 @@
 \newcommand{\psvalcaneq}[2]{\psvalcan{$#1 = #2$}}
 \newcommand{\psvalcanin}[2]{\psvalcan{$#1 \in \lbrace #2 \rbrace$}}
 
+% Preservation
+
+\newcommand{\pnpremise}[1]{#1 by premise and lemma \ref{lemuni}.}
+\newcommand{\pntypes}[1]{#1 by lemmas \ref{leminv} and \ref{lemuni}.}
+\newcommand{\pnexpsubst}[1]{#1 by lemma \ref{lemexp}.}
+\newcommand{\pntypsubst}[1]{#1 by lemma \ref{lemtyp}.}
+\newcommand{\pnbc}[2]{#1 because #2.}
+
 % Temporary
 
 \newcommand{\w}{}
